--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
        }
         
 @media (min-width: 600px) {
-  header{
+  .calculator{
     width:50%;
+      height:50%;
   }
 }
 @media (min-width: 600px) {
@@ -135,3 +136,4 @@
 
 
 </html>
+
