--- a/index.html
+++ b/index.html
@@ -154,11 +154,11 @@
     <button onclick="appendToDisplay('4')">4</button>
     <button onclick="appendToDisplay('5')">5</button>
     <button onclick="appendToDisplay('6')">6</button>
-    <button onclick="appendToDisplay('x')" class="operator-btn">x</button>
+    <button onclick="appendToDisplay('*')" class="operator-btn">x</button>
     <button onclick="appendToDisplay('1')">1</button>
     <button onclick="appendToDisplay('2')">2</button>
     <button onclick="appendToDisplay('3')">3</button>
-    <button onclick="appendToDisplay('&#xF7')" class="operator-btn">&#xF7</button>
+    <button onclick="appendToDisplay('/')" class="operator-btn">&#xF7</button>
     <button onclick="appendToDisplay('0')">0</button>
     <button onclick="appendToDisplay('.')">.</button>
     <button onclick="calculate()">=</button>
@@ -198,6 +198,7 @@
 
 
 </html>
+
 
 
 
