--- a/index.html
+++ b/index.html
@@ -39,8 +39,10 @@
         width:415px;
     overflow: hidden;
     height: 100vh;
-    margin-bottom: 40px;
-    margin-top: 40px;
+    margin-bottom: 50px;
+    margin-top: 50px;
+    padding-top:-20px;
+    padding-bottom:-20px;                 
     
     }
 
@@ -57,7 +59,7 @@
           cursor: pointer;
           gap:10px;
           justify-content: space-evenly;
-          margin: 9px;
+          margin: 7px;
           margin-left:-18px;
          padding: 10px;
 
@@ -204,6 +206,7 @@
 
 
 </html>
+
 
 
 
